--- a/Lec 2/Challenge4.html
+++ b/Lec 2/Challenge4.html
@@ -1,17 +1,31 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<head>
+<html xmlns="http://www.w3.org/1999/xhtml">
 
-<ul style="list-style-type:none;">
-   <li>Apple</li>
-   <li>Banada</li>
-   <li><ol>Fruit 1
-      <li>Orange
-      <li>Grape
-  <ul>Fruit 2
-         <ol><li>
-              <ul>Kiwi
-              </ul>
-              <ol>
-         <li>Pineapple
-         <li>Star Fruit
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="description" content="Basic Page Module 2" />
+		<meta content="en-us" http-equiv="Content-Language" />
+		<title>Challegne 4: list</title>
+	</head>
+
+	<body>
+
+    <ul style="list-style-type:none;">
+       <li>Apple</li>
+       <li>Banada</li>
+       <li><ol>Fruit 1
+          <li>Orange</li>
+          <li>Grape</li>
+      <ul>Fruit 2
+             <ol><li>
+                  <ul>Kiwi
+                  </ul>
+                  <ol>
+             <li>Pineapple</li>
+             <li>Star Fruit</li>
+        </ul>
+
+	</body>
+
+</html>
