--- a/Lec 2/Challenge2 P2.html
+++ b/Lec 2/Challenge2 P2.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<a href xmlns="http://www.w3.org/1999/xhtml"</a>
+<html xmlns="http://www.w3.org/1999/xhtml">
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="description" content="Basic Page Module 2" />
 		<meta content="en-us" http-equiv="Content-Language" />
-		<title>This is some awesome text</title>
+		<title>Challenge 2: links</title>
 	</head>
 
 	<body>
 
-		<div>
-			<p>This is some awesome text</p>
-		</div>
-
+<!--link back to challenge 2 page one-->
+<a href="Challenge2.html">this turn back to 1st page
+</a>
 	</body>
 
 </html>
