--- a/Lec 2/Challenge3.html
+++ b/Lec 2/Challenge3.html
@@ -1,31 +1,46 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
- <body>
+<html xmlns="http://www.w3.org/1999/xhtml">
 
-<div class="row">
-    <div class="column 1">Header 1
-    <div>
-    <div class="column 2">Heading 2
-    <div>
-    <div class="column 3">Heading 3
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="description" content="Basic Page Module 2" />
+		<meta content="en-us" http-equiv="Content-Language" />
+		<title>Challenge 3: table</title>
+    <style>
+     table,
+        th,
+        td {
+          border: 1px solid black;
+          border-collapse: collapse;
+          padding: 12px;
+          text-align: center;
+        }
+    </style>
+  </head>
 
-<div class="row">
-    <div class="column 1">Cell 1
-    <div>
-    <div class="column 2">Cell 2
-
-<div class="row">
-    <div class="column 1">Cell 3
-    <div>
-    <div class="column 2">Cell 4
-    <div>
-    <div class="column 3">Cell 5
-
-<div class="row">
-    <div class="column 1">Cell 6
-    <div>
-    <div class="column 2">Cell 7
-
- </body>
+  <body>
+    <table>
+      <tr>
+        <th>Header 1</th>
+        <th>Heading 2</th>
+        <th>Heading 3</th>
+     </tr>
+    <tr>
+        <td>Cell 1</td>
+        <td colspan="2">
+        <td>Cell 2</td>
+     </tr>
+    <tr>
+        <td>Cell 3</td>
+        <td>Cell 4</td>
+        <td>Cell 5</td>
+    </tr>
+    <tr>
+        <td>Cell 6</td>
+        <td colspan="2">
+        <td>Cell 7</td>
+    </tr>
+	</body>
 
 </html>
