--- a/Lec 2/Challenge3.html
+++ b/Lec 2/Challenge3.html
@@ -28,7 +28,7 @@
      </tr>
     <tr>
         <td>Cell 1</td>
-        <td>Cell 2</td>
+        <td colspan="2" align="left">Cell 2</td>
      </tr>
     <tr>
         <td>Cell 3</td>
@@ -37,7 +37,7 @@
     </tr>
     <tr>
         <td>Cell 6</td>
-        <td>Cell 7</td>
+        <td colspan="2" align="left">Cell 7</td>
     </tr>
 	</body>
 
