--- a/Task 3.html
+++ b/Task 3.html
@@ -41,7 +41,8 @@
 				<p>These are the <strong>techniques</strong> learned during class</p>
 				<p>Canada's a <em>beautiful</em> nation</p>
 
-
+     <img src="Canada_flag.jpg" alt="Trulli" width="500" height="333">
+     <img src="Canada_land.jpg">
 
 		</div>
 
