Update Lab 2 Template II.html

--- a/Lecture 3/Lab 2 Template II.html
+++ b/Lecture 3/Lab 2 Template II.html
@@ -12,13 +12,14 @@
 	<body>
 		<!--The body contains all of the content for our page-->
 		<div>
+			
 			<p>Chang's New Story</p>
 
 		  <p>Testing</p>
 
 			<p>Alexander Chang</p>
 
-			<p attribute=>Work on the assignments</p>
+			<p>Work on the assignments</p>
 
 		</div>
 
