--- a/Lecture 3/Lab 2 Template II.html
+++ b/Lecture 3/Lab 2 Template II.html
@@ -12,14 +12,14 @@
 	<body>
 		<!--The body contains all of the content for our page-->
 		<div>
-			
-			<p>Chang's New Story</p>
+
+			<p class="purpletext">Chang's New Story</p>
 
 		  <p>Testing</p>
 
-			<p>Alexander Chang</p>
+			<p id="MyfirstID">Alexander Chang</p>
 
-			<p>Work on the assignments</p>
+			<p class="purpletext">Work on the assignments</p>
 
 		</div>
 
