--- a/Task 3.html
+++ b/Task 3.html
@@ -13,7 +13,10 @@
 
 		<div>
 		<a href="Challenge2 P2.html">
-    <a href="WWW.Youtube.com"
+    <a href="WWW.Youtube.com">
+		</body>
+
+		<body>
 		<ul style="list-style-type:none;">
 			 <li>Jackson</li>
 			 <li>Bermuda</li>
