--- a/Task 3.html
+++ b/Task 3.html
@@ -41,6 +41,8 @@
 				<p>These are the <strong>techniques</strong> learned during class</p>
 				<p>Canada's a <em>beautiful</em> nation</p>
 
+        <img src="pic_trulli.jpg" alt="Italian Trulli">
+        <img src="img_chania.jpg" alt="Flowers in Chania">
 
 		</div>
 
