--- a/Task 3.html
+++ b/Task 3.html
@@ -41,11 +41,7 @@
 				<p>These are the <strong>techniques</strong> learned during class</p>
 				<p>Canada's a <em>beautiful</em> nation</p>
 
-        <img src="pic_trulli.jpg" alt="Italian Trulli">
-        <img src="img_chania.jpg" alt="Flowers in Chania">
-
-		</div>
-
-	</body>
+        <img src="pic_trulli.jpg" alt="Trulli" width="500" height="333">
+        <img src="img_chania.jpg" alt="Flowers in Chania" width="460" height="345">
 
 </html>
