--- a/Task 3.html
+++ b/Task 3.html
@@ -14,6 +14,10 @@
 		<div>
 
 		<body>
+
+    <p><a href="https://www.w3schools.com/">Visit W3Schools.com!</a></p>
+		<p><a href="Challenge2 P2.html">"</a></p>
+
 		<ul style="list-style-type:none;">
 			 <li>Jackson</li>
 			 <li>Bermuda</li>
