--- a/Lecture 4/Challenge 3.html
+++ b/Lecture 4/Challenge 3.html
@@ -6,21 +6,11 @@
         <meta name="description" content="Basic Page Module 3" />
 		<meta content="en-us" http-equiv="Content-Language" />
 		<title>This is some awesome text</title>
-		<link href="Challenge style III.css" type="text/css" rel="stylesheet" />
+		<link href="styles.css" type="text/css" rel="stylesheet" />
 	</head>
 
 	<body>
 		<!--The body contains all of the content for our page-->
-
-    <div>
-      <p>this is in the first box</p>
-    </div>
-    <div class="myDiv">
-      <p>this is also in the first box</p>
-    </div>
-
-
-
 
 		<div>
 			<p>This is some awesome text</p>
