--- a/Lecture 4/Challenge 1.html
+++ b/Lecture 4/Challenge 1.html
@@ -9,15 +9,17 @@
 		<link href="Challenge style.css" type="text/css" rel="stylesheet" />
 	</head>
 
-	<body>
+	<body class="body1">
 		<!--The body contains all of the content for our page-->
 
-		<div>
-			<p>This is some awesome text</p>
+    <div class="border1"
+		<div class="border2">
+			<p>This is text</p>
 		</div>
+    <div class="border3"
+<img src="Brock_University.jpg" alt="Brock" width="250" length="500">
+     </div>
 
-<img src="" alt=Brock University Badger Mascot>
-
-
+    </div>
 	</body>
 </html>
