--- a/Lecture 4/Challenge 2.html
+++ b/Lecture 4/Challenge 2.html
@@ -11,11 +11,16 @@
 
 	<body>
 		<!--The body contains all of the content for our page-->
-
-		<div>
-			<p>This is some awesome text</p>
+    <div>
+		<div class="myborder">
+			<p>This is some content</p>
 		</div>
+    <p class="style1">This is some text</p>
 
 
+<p class="style2">More <span class="span1">text</span> than before</p>
+
+<p class="style3">I <span class="span2">can't</span> believe if not more text</p>
+   </div>
 	</body>
 </html>
