--- a/Lecture 4/Challenge 3.html
+++ b/Lecture 4/Challenge 3.html
@@ -12,10 +12,14 @@
 	<body>
 		<!--The body contains all of the content for our page-->
 
-		<div>
-			<p>This is some awesome text</p>
-		</div>
 
+      <div class="none">
+        <div class="dotted"
+			<p class="myDiv2">This is the first box</p>
+      <p class="myDiv">This is also in the first box</p>
+         </div>
+      <p>This is some awesome text</p
+      </div>
 
 	</body>
 </html>
