--- a/Lecture 4/Challenge 1.html
+++ b/Lecture 4/Challenge 1.html
@@ -12,13 +12,13 @@
 	<body class="body1">
 		<!--The body contains all of the content for our page-->
 
-    <div class="border1"
+    <div class="border1">
 		<div class="border2">
 			<p>This is text</p>
 		</div>
-    <div class="border3"
+    <div class="border3">
 <img src="Brock_University.jpg" alt="Brock" width="250" length="500">
-     </div>
+    </div>
 
     </div>
 	</body>
