--- a/Lecture 4/Challenge 3.html
+++ b/Lecture 4/Challenge 3.html
@@ -14,11 +14,11 @@
 
 
       <div class="none">
-        <div class="dotted"
+        <div class="dotted">
 			<p class="myDiv2">This is the first box</p>
       <p class="myDiv">This is also in the first box</p>
          </div>
-      <p>This is some awesome text</p
+      <p>This is some awesome text</p>
       </div>
 
 	</body>
