--- a/Lecture 4/Challenge 2.html
+++ b/Lecture 4/Challenge 2.html
@@ -13,7 +13,7 @@
 		<!--The body contains all of the content for our page-->
     <div>
 		<div class="myborder">
-			<p>This is some content</p>
+			<p style="text-align: center">This is some content</p>
 		</div>
     <p class="style1">This is some text</p>
 
