--- a/Lecture 4/Challenge 2.html
+++ b/Lecture 4/Challenge 2.html
@@ -16,11 +16,14 @@
 			<p style="text-align: center">This is some content</p>
 		</div>
     <p class="style1">This is some text</p>
+     </div>
 
+     <div class="div2">
+    <p class="style2">More <span class="span1">text</span> than before</p>
+     </div>
 
-<p class="style2">More <span class="span1">text</span> than before</p>
-
-<p class="style3">I <span class="span2">can't</span> believe if not more text</p>
+   <div class="div3">
+  <p class="style3">I <span class="span2">can't</span> believe if not more text</p>
    </div>
 	</body>
 </html>
