--- a/Lecture 4/Challenge 2.html
+++ b/Lecture 4/Challenge 2.html
@@ -15,6 +15,7 @@
 		<div class="myborder">
 			<p style="text-align: center">This is some content</p>
 		</div>
+      <div>
     <p class="style1">This is some text</p>
      </div>
 
